[package]
name = "p5doc-example"
version = "0.1.0"
edition = "2021"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
description = "p5.js diagram within rustdoc"
documentation = "https://termoshtt.github.io/p5doc/p5doc"
repository = "https://github.com/termoshtt/p5doc"
license = "MIT OR Apache-2.0"

[dependencies]
p5doc = { path = "../p5doc" }
