[package]
name = "p5doc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.28"
quote = "1.0.9"
regex = "1.7.1"
syn = { version = "1.0.75", features = ["full", "extra-traits"] }
