[package]
name = "p5doc"
version = "0.1.0"
edition = "2021"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
description = "p5.js diagram within rustdoc"
documentation = "https://termoshtt.github.io/p5doc/p5doc"
repository = "https://github.com/termoshtt/p5doc"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.28"
quote = "1.0.9"
regex = "1.7.1"
syn = { version = "1.0.75", features = ["full", "extra-traits"] }
